--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,34 +1,25 @@
 <div class="page-container">
   <div class="one-column">
     <div class="card">
-      <%= link_to "Get Credits", new_charge_path, class: "button" %>
-      <%= link_to "New Event", new_event_path, class: "button primary" %>
+      <div class="event-header">
+        <h2 class="centered-heading">Current</h2>
+        <%= link_to "Get Credits", new_charge_path, class: "button" %>
+        <%= link_to "New Event", new_event_path, class: "button primary" %>
+      </div>
     </div>
 
     <% if @events.count.positive? %>
-      <div class="card">
-        <h2 class="centered-heading">Current</h2>
-        <table>
-          <thead>
-            <tr>
-              <th>Name</th>
-              <th>Phone</th>
-              <th>Duration</th>
-              <th>Time Left</th>
-            </tr>
-          </thead>
-          <tbody>
-            <% @events.current.each do |e| %>
-              <tr>
-                <td><%= link_to e.name, event_path(e) %></td>
-                <td><%= e.phone_number.phone_formatted %></td>
-                <td><%= Time.zone.at(e.duration).utc.strftime("%H:%M:%S") %></td>
-                <td><%= e.time_left %></td>
-              </tr>
-            <% end %>
-          </tbody>
-        </table>
-      </div>
+      <% @events.each do |e| %>
+        <div class="card">
+          <%= link_to event_path(e) do %>
+            <div class="event-header">
+              <span><%= e.name %></span>
+              <span><%= e.phone_number.phone_formatted %></span>
+              <span><%= e.time_left %></span>
+            </div>
+          <% end %>
+        </div>
+      <% end %>
     <% end %>
   </div>
 </div>
