--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   width: 120px;
   background-color: $secondary;
+  box-shadow: 0 10px 20px rgba(0,0,0,0.25), 0 7px 7px rgba(0,0,0,0.22);
   #close {
     display: none;
   }
