adds insights tab, ADIOS turbolinks

--- a/app/views/layouts/navigation/_logged_in.html.erb
+++ b/app/views/layouts/navigation/_logged_in.html.erb
@@ -12,6 +12,9 @@
     <div class="link">
       <%= link_to('Credits', new_charge_path) %>
     </div>
+    <div class="link">
+      <%= link_to('Insights', insights_path) %>
+    </div>
   </div>
   <div class="link">
     <%= link_to('Logout', destroy_user_session_path, method: :delete) %>
