--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -11,7 +11,7 @@
           <%= f.input :password_confirmation, required: true %>
         </div>
 
-        <div class="form-actions" data-turbolinks="false">
+        <div class="form-actions">
           <%= f.button :submit, "Sign up" %>
         </div>
       <% end %>
