--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -55,8 +55,11 @@ div.page-container {
             padding: 8px;
             margin: 5px;
             border-radius: 4px;
-            border: 1px solid black;
+            border: 1px solid rgba(185, 185, 185, 0.8);
             text-align: center;
+            p {
+              font-size: 18px;
+            }
           }
         }
       }
