--- a/app/views/broadcasts/show.html.erb
+++ b/app/views/broadcasts/show.html.erb
@@ -1,6 +1,8 @@
-<h1 class="centered-heading"><%= @event.name %></h1>
+<% if @event.hashtag %>
+  <h1 class="centered-heading"><%= @event.hashtag %></h1>
+<% end %>
 <h1 class="centered-heading"><%= @event.phone_number.phone_formatted %></h1>
 <h1 class="centered-heading" id="current-message"></h1>
 
-<!-- This is used in js to subscribe to the right channel -->
+<!-- This is used to subscribe to the right channel -->
 <div class="hidden" id="broadcast-token"><%= @event.broadcast_token %></div>
