fixes some twitter things

--- a/app/views/events/expired.html.erb
+++ b/app/views/events/expired.html.erb
@@ -2,7 +2,7 @@
   <div class="one-column">
     <div class="card">
       <div class="event-header">
-        <h2 class="centered-heading">Expired</h2>
+        <h2 class="centered-heading">Archive</h2>
         <%= link_to "Get Credits", new_charge_path, class: "button" %>
         <%= link_to "New Event", new_event_path, class: "button primary" %>
       </div>
